# mxp-protocol

./: .gitignore  404.html  CHANGELOG.md  CNAME  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  README.md  SPEC.md  WHITEPAPER.md  bench_baseline.txt  bench_comparison.txt  changelog.html  contributing.html  introduction.html  print.html  searchindex.js  searchindex.json
.github/workflows/: ci.yml  docs.yml  release.yml
benches/: codec.rs  comparison.rs  transport.rs
docs/: BENCHMARK_REPRODUCIBILITY.md  COMPARISON_BENCHMARKS.md  PERFORMANCE_NOTES.md  book.toml
docs/src/: SUMMARY.md  introduction.md
docs/transport/: architecture.md  beta-checklist.md  plan.md  prd.md  runbook.md  targets.md  test-plan.md
docs/whitepaper/: outline.md
examples/: agents.html  basic.html  perf_baseline.rs  ping_pong.rs  streaming.html
implementation/: encoding.html  getting-started.html  performance.html  quic.html
protocol/: message-types.html  security.html  transport.html  wire-format.html
reference/: api.html  benchmarks.html  comparison.html  errors.html
src/: lib.rs
src/protocol/: codec.rs  error.rs  header.rs  message.rs  metrics.rs  mod.rs  types.rs
src/transport/: ack.rs  anti_amplification.rs  buffer.rs  congestion.rs  connection.rs  crypto.rs  datagram.rs  debug.rs  endpoint.rs  error.rs  flow.rs  handshake.rs  loss.rs  mod.rs  packet.rs  packet_crypto.rs  scheduler.rs  session.rs  socket.rs  stream.rs  transport.rs
src/transport/crypto/: aead.rs  chacha20.rs  hkdf.rs  hmac.rs  mixing.rs  poly1305.rs  sha256.rs
tests/: packet_engine.rs  stream_flow.rs
