[package]
name = "mxp"
version = "0.1.0"
edition = "2024"
rust-version = "1.85"
authors = ["YAFA Cloud Services LLC support@yafa.dev"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/yafatek/mxp-protocol"
homepage = "https://getmxp.xyz"
keywords = ["mxp", "agents", "ai", "protocol", "transport"]
categories = ["network-programming", "asynchronous"]
description = "MXP (Mesh eXchange Protocol) - High-performance protocol for agent-to-agent communication"

[lib]
name = "mxp"
path = "src/lib.rs"

[dependencies]
# Zero-copy and serialization
bytes = "1.10.1"

# Hashing
xxhash-rust = { version = "0.8.15", features = ["xxh3"] }

# Error handling
thiserror = "2.0.17"
tracing = "0.1"

# UUIDs for message/agent IDs
uuid = { version = "1.18.1", features = ["v4", "serde"] }

# Optional: Serialization support
serde = { version = "1.0.228", features = ["derive"], optional = true }


[features]
default = []
debug-tools = []
serde = ["dep:serde", "uuid/serde"]

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
strip = true

[profile.bench]
inherits = "release"
lto = "fat"

[profile.dev]
opt-level = 0

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
proptest = "1.4"

[[bench]]
name = "codec"
harness = false

[[bench]]
name = "transport"
harness = false

